--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,14 +35,18 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.google.android.material:material:1.0.0'
 
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
+    // Retrofit & OkHttp
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
     //ButterKnife
     implementation 'com.jakewharton:butterknife:10.0.0'
@@ -52,22 +56,35 @@ dependencies {
     implementation 'com.github.joielechong:countrycodepicker:2.4.1'
 
     //rangeBar
-    implementation 'com.edmodo:rangebar:1.0.0'
+    implementation 'com.appyvet:materialrangebar:1.4.7'
+
+
+    //ImagePicker(pick image from gallery or camera)
+    implementation 'com.github.nguyenhoanglam:ImagePicker:1.3.0'
 
     //glide library for download images
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.1.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.1.0'
 
-    //slider
-    implementation 'com.github.smarteist:autoimageslider:1.3.2'
+
+    //rtl viewPager
+    implementation 'com.duolingo.open:rtl-viewpager:1.0.2'
+
+    //viewPager Indicator
+    implementation 'me.relex:circleindicator:1.2.2'
 
     //rounded ImageView
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //slider
+    implementation 'com.github.firdausmaulan:GlideSlider:1.4.0'
 
     //library for change the font of all the app
     implementation 'io.github.inflationx:calligraphy3:3.1.1'
     implementation 'io.github.inflationx:viewpump:2.0.3'
 
-    implementation 'com.android.support:multidex:1.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
 
+
+    implementation 'com.cuneytayyildiz:gestureimageview:1.0.0'
 }
